# content-production-system

./: .gitignore  README.md  config.yaml  env.example  pyproject.toml  requirements.txt  test_outline_complete.sh
api/: __init__.py  main.py
api/routes/: __init__.py  channels.py  logs.py  profiles.py  projects.py  (+4 more)
config/: __init__.py
core/: __init__.py  ai_client.py  context_manager.py  orchestrator.py  prompt_engine.py
docs/: agent_research.md  ai_prompting_guide.md  architecture.md  context_management.md  debug_development_plan.md  field_clarification_design.md  field_dependency_design.md  field_schemas.md  field_selection_design.md  fix_plan_20260201.md  fix_plan_20260201_v2.md  fix_plan_rollback.md  frontend_development_plan.md  implementation_guide.md  prompt_design.md  settings_complete_plan.md  settings_development_plan.md  ui_core_fix_plan.md  ui_design.md  ui_development_plan.md  ui_progress_fix_plan.md
tests/: __init__.py  conftest.py  test_agent_modification.py  test_clarification_and_continuous.py  test_clarification_fix.py  test_clarify_api.py  test_drag_and_dependency.py  test_e2e_field_generation.py  test_field_id_clarification.py  test_field_schema_injection.py  test_generating_fix.py  test_generating_status.py  test_generation_controls.py  test_mention_feature.py  test_outline_editing.py  test_outline_preserve_content.py  test_prompt_design.py  test_settings_fix.py  test_workflow_fix.py  test_workflow_flow.py
ui/: __init__.py  cli.py
web/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
(+82 files in other folders)
